// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NameValueList should accept and apply Grid props 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  align-items: center;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 48px 96px;
  justify-items: center;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct alignment of name 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct alignment of value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct gap between rows and columns 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct nameProps width with max and min 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
    class="c0"
  >
    <dl
      class="c1"
    >
      <div
        class="c2"
      >
        <dt
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
        >
          name
        </dt>
        <dd
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); margin: 0px;"
        >
          entry
        </dd>
      </div>
      <div
        class="c2"
      >
        <dt
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
        >
          location
        </dt>
        <dd
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); margin: 0px;"
        >
          San Francisco
        </dd>
      </div>
      <div
        class="c2"
      >
        <dt
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
        >
          health
        </dt>
        <dd
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); margin: 0px;"
        >
          80
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`NameValueList should render correct valueProps width with max and min 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(min(192px, 100%), 384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
    class="c0"
  >
    <dl
      class="c1"
    >
      <div
        class="c2"
      >
        <dt
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
        >
          name
        </dt>
        <dd
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); margin: 0px;"
        >
          entry
        </dd>
      </div>
      <div
        class="c2"
      >
        <dt
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
        >
          location
        </dt>
        <dd
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); margin: 0px;"
        >
          San Francisco
        </dd>
      </div>
      <div
        class="c2"
      >
        <dt
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
        >
          health
        </dt>
        <dd
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); margin: 0px;"
        >
          80
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`NameValueList should render correct width of name 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct width of value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 96px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct width of value when value is array 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 96px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
    class="c0"
  >
    <dl
      class="c1"
    >
      <div
        class="c2"
      >
        <dt
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
        >
          name
        </dt>
        <dd
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); margin: 0px;"
        >
          entry
        </dd>
      </div>
      <div
        class="c2"
      >
        <dt
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
        >
          location
        </dt>
        <dd
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); margin: 0px;"
        >
          San Francisco
        </dd>
      </div>
      <div
        class="c2"
      >
        <dt
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
        >
          health
        </dt>
        <dd
          class="textRecipe_size_medium"
          style="color: rgb(68, 68, 68); margin: 0px;"
        >
          80
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`NameValueList should render name/value as a column when pairProps = { direction: \\n    'column' } 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render outside grommet wrapper 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: 192px minmax(auto, 384px);
  grid-gap: 12px 48px;
}

@media only screen and (max-width: 768px) {
  .c0 {
    margin: 0px;
  }
}

<dl
  class="c0"
>
  <dt
    class="textRecipe_size_medium"
    style="font-weight: bold;"
  >
    name
  </dt>
  <dd
    class="textRecipe_size_medium"
  >
    entry
  </dd>
  <dt
    class="textRecipe_size_medium"
    style="font-weight: bold;"
  >
    location
  </dt>
  <dd
    class="textRecipe_size_medium"
  >
    San Francisco
  </dd>
  <dt
    class="textRecipe_size_medium"
    style="font-weight: bold;"
  >
    health
  </dt>
  <dd
    class="textRecipe_size_medium"
  >
    80
  </dd>
</dl>
`;

exports[`NameValueList should render pairs in a grid when layout="grid" 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render value above name when pairProps = { direction: \\n    'column-reverse' } 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
    </div>
    <div
      class="c2"
    >
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
    </div>
    <div
      class="c2"
    >
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should support custom theme 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 192px) );
  grid-gap: 12px 24px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(125, 76, 219); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: lighter; margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(125, 76, 219); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: lighter; margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(125, 76, 219); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: lighter; margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;
